[gd_scene load_steps=6 format=3 uid="uid://dajjgc6nyboio"]

[ext_resource type="Script" path="res://asteroid/asteroid_polygon.gd" id="1_688kx"]
[ext_resource type="Script" path="res://asteroid/asteroid.gd" id="1_w40l2"]
[ext_resource type="Script" path="res://components/polygon_border_drawer.gd" id="2_x6g5x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_lstgr"]
radius = 5.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l2jsy"]
particle_flag_disable_z = true
direction = Vector3(0, 0, 0)
spread = 180.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 20.0
initial_velocity_max = 80.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[node name="Asteroid" type="Node2D"]
script = ExtResource("1_w40l2")

[node name="PolygonCollisionArea" type="Area2D" parent="."]

[node name="AsteroidPolygon" type="CollisionPolygon2D" parent="PolygonCollisionArea"]
polygon = PackedVector2Array(0, 0, 10, 0, 0, -10)
script = ExtResource("1_688kx")

[node name="PolygonBorderDrawer" type="Node" parent="PolygonCollisionArea/AsteroidPolygon" node_paths=PackedStringArray("collisionPolygon")]
script = ExtResource("2_x6g5x")
collisionPolygon = NodePath("..")

[node name="PolygonCenterArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PolygonCenterArea"]
shape = SubResource("CircleShape2D_lstgr")

[node name="Explosion" type="GPUParticles2D" parent="."]
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_l2jsy")
explosiveness = 1.0
randomness = 1.0
